Update to fix CI issue with code not formatted
